[tool.poetry]
name = "open-rarity"
version = "0.4.2-beta"
description = "Open-Rarity library is an open standard that provides an easy, explanable and reproducible computation for NFT rarity"
authors = ["Dan Meshkov <daniil.meshkov@opensea.io>", "Vicky Gong <vicky.gong@opensea.io>"]
license = "Apache-2.0"

readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.9.1"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.9.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.19.0"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.2"
isort = "^5.10.1"
flake8-bugbear = "^22.7.1"
pep8-naming = "^0.13.1"
types-requests = "^2.28.6"
pytest-cov = "^3.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
