[tool.poetry]
authors = ["Dan Meshkov <daniil.meshkov@opensea.io>", "Vicky Gong <vicky.gong@opensea.io>"]
description = "Open-Rarity library is an open standard that provides an easy, explanable and reproducible computation for NFT rarity"
license = "Apache-2.0"
name = "open-rarity"
version = "0.7.5"

readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
numpy = ">=1.23.1"
pydantic = ">=1.9.1,<2.3"
python = ">=3.10,<3.13"
requests = ">=2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^5.0.2"
flake8-bugbear = "^22.7.1"
isort = "^5.10.1"
mypy = "^0.982"
pep8-naming = "^0.13.1"
pre-commit = "^2.19.0"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-mock = "^3.10.0"
types-requests = ">=2.28.6"

[tool.black]
line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
include_trailing_comma = true
known_first_party = "open_rarity"
multi_line_output = 3
profile = "black"

